[gd_scene load_steps=19 format=3 uid="uid://bltvfi1s08p8i"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ctcdj70gy8cjk" path="res://scenes/dialogs/sound_dialog/sound_dialog.tscn" id="3"]
[ext_resource type="Script" path="res://scenes/more_button.gd" id="3_gwbec"]
[ext_resource type="Texture2D" uid="uid://40aobio0y13d" path="res://assets/themes/dark/more.svg" id="3_y7whg"]
[ext_resource type="Texture2D" uid="uid://dhooe3adxpeog" path="res://assets/drum.png" id="5_ioqei"]
[ext_resource type="Texture2D" uid="uid://dps6grd6p3qrh" path="res://assets/guitar.png" id="6_tdh5i"]
[ext_resource type="Theme" uid="uid://c4u5j7fm8hehe" path="res://assets/themes/dark/dark.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://cn2vpe0ceeqdc" path="res://assets/piano.png" id="7_ye766"]
[ext_resource type="PackedScene" uid="uid://bhwn5w0b5pfsb" path="res://scenes/dialogs/column_dialog/column_dialog.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://bma8j042fadt8" path="res://assets/trumpet.png" id="8_mj0ld"]
[ext_resource type="PackedScene" uid="uid://c6x7qgd6xh3mr" path="res://scenes/dialogs/filename_dialog/filename_dialog.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://b856d6b7lcmnb" path="res://scenes/dialogs/progress_dialog/progress_dialog.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://c04t7hvga6qed" path="res://scenes/dialogs/load_dialog/load_dialog.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://c5fivptia1eum" path="res://scenes/dialogs/settings_dialog/settings_dialog.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://d3mp71v2tbwwq" path="res://scenes/dialogs/tutorial_dialog/tutorial_dialog.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://c8yhh7y4x3ra7" path="res://scenes/dialogs/update_dialog/update_dialog.tscn" id="14"]
[ext_resource type="PackedScene" uid="uid://deqkupbh7ke6w" path="res://scenes/dialogs/about_dialog/about_dialog.tscn" id="16"]

[sub_resource type="Theme" id="16"]
LineEdit/constants/minimum_spaces = 7

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7")
script = ExtResource("1")

[node name="BgPanel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioPlayers" type="Node2D" parent="."]

[node name="AudioStreamPlayer0" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="HBoxToolBar" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.024
anchor_top = 0.03
anchor_right = 0.976
anchor_bottom = 0.03
offset_left = 0.424
offset_right = 0.575989
offset_bottom = 60.0
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="HBoxToolBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
focus_neighbor_left = NodePath("../More")
focus_neighbor_right = NodePath("../Export")
toggle_mode = true
text = "BTN_PLAY"

[node name="BPMHbox" type="HBoxContainer" parent="HBoxToolBar"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HBoxToolBar/BPMHbox"]
layout_mode = 2
theme_type_variation = &"LabelSubtitle"
text = "BPM"

[node name="BPMSpinBox" type="SpinBox" parent="HBoxToolBar/BPMHbox"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("16")
min_value = 50.0
max_value = 150.0
value = 80.0

[node name="Control" type="Control" parent="HBoxToolBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Export" type="Button" parent="HBoxToolBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../Play")
focus_neighbor_right = NodePath("../SaveProject")
mouse_filter = 1
text = "BTN_EXPORT"

[node name="SaveProject" type="Button" parent="HBoxToolBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../Export")
focus_neighbor_right = NodePath("../OpenProject")
mouse_filter = 1
text = "BTN_SAVE_PROJECT"

[node name="OpenProject" type="Button" parent="HBoxToolBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../SaveProject")
focus_neighbor_right = NodePath("../More")
mouse_filter = 1
text = "BTN_OPEN_PROJECT"

[node name="More" type="Button" parent="HBoxToolBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_neighbor_left = NodePath("../OpenProject")
focus_neighbor_right = NodePath("../Play")
theme_type_variation = &"MenuButtonIcon"
icon = ExtResource("3_y7whg")
icon_alignment = 1
expand_icon = true
script = ExtResource("3_gwbec")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.034
anchor_top = 0.167
anchor_right = 0.977
anchor_bottom = 0.167
offset_left = 0.183998
offset_top = -0.199997
offset_right = -0.44812
offset_bottom = 446.8
size_flags_vertical = 3

[node name="ImageContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"ColumnContainer"
theme_override_constants/separation = 8

[node name="Control" type="Control" parent="HBoxContainer/ImageContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2

[node name="Drums" type="TextureRect" parent="HBoxContainer/ImageContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("5_ioqei")
expand_mode = 1

[node name="Guitar" type="TextureRect" parent="HBoxContainer/ImageContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("6_tdh5i")
expand_mode = 1

[node name="Piano" type="TextureRect" parent="HBoxContainer/ImageContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("7_ye766")
expand_mode = 1

[node name="Trumpet" type="TextureRect" parent="HBoxContainer/ImageContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("8_mj0ld")
expand_mode = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true
scroll_deadzone = 60

[node name="ColumnContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"ColumnContainer"
theme_override_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer/ColumnContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="HBoxContainer/ScrollContainer/ColumnContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="AddButton" type="Button" parent="HBoxContainer/ScrollContainer/ColumnContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "+"

[node name="DimOverlay" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_type_variation = &"ShadowPanel"

[node name="SoundDialog" parent="." instance=ExtResource("3")]
visible = false
layout_mode = 0
offset_right = 520.0
offset_bottom = 598.0

[node name="SaveDialog" parent="." instance=ExtResource("9")]
visible = false
layout_mode = 0

[node name="ColumnDialog" parent="." instance=ExtResource("8")]
visible = false
layout_mode = 0

[node name="ProgressDialog" parent="." instance=ExtResource("10")]
visible = false
layout_mode = 0

[node name="LoadDialog" parent="." instance=ExtResource("11")]
visible = false
layout_mode = 0
offset_right = 452.0
offset_bottom = 580.0

[node name="UpdateDialog" parent="." instance=ExtResource("14")]
visible = false
layout_mode = 0

[node name="TutorialDialog" parent="." instance=ExtResource("13")]
visible = false
layout_mode = 0

[node name="SettingsDialog" parent="." instance=ExtResource("12")]
visible = false
layout_mode = 0
offset_right = 559.0
offset_bottom = 587.0

[node name="AboutDialog" parent="." instance=ExtResource("16")]
visible = false
layout_mode = 0
offset_right = 593.0
offset_bottom = 589.0

[connection signal="toggled" from="HBoxToolBar/Play" to="." method="_on_play_toggled"]
[connection signal="value_changed" from="HBoxToolBar/BPMHbox/BPMSpinBox" to="." method="_on_bpm_spin_box_value_changed"]
[connection signal="pressed" from="HBoxToolBar/Export" to="." method="_on_export_pressed"]
[connection signal="pressed" from="HBoxToolBar/SaveProject" to="." method="_on_save_project_pressed"]
[connection signal="pressed" from="HBoxToolBar/OpenProject" to="." method="_on_open_project_pressed"]
[connection signal="pressed" from="HBoxContainer/ScrollContainer/ColumnContainer/VBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="removed_column" from="ColumnDialog" to="." method="_on_column_dialog_removed_column"]
[connection signal="new_project" from="LoadDialog" to="." method="_on_load_dialog_new_project"]
